# binet

./: CMakeLists.txt
include/binet/: api.h
include/binet/core/: data_type.h  matrix.h  string.h
include/binet/core/matrix/: operator_bitwise.h  operator_set.h
src/: CMakeLists.txt
src/binet/: api.c  api_internal.h
src/binet/core/: matrix.c  matrix_internal.h  matrix_string_serialize.c  matrix_string_serialize.h  string.c
src/binet/core/matrix/: operator_bitwise.c  operator_set.c
test/: main.c
